# GenAIbot

./: README.md  artifacts.dvc  pyproject.toml
docs/: mkdocs.yml
docs/docs/: about.md  index.md
docs/docs/api_ref/: api_ref.md
docs/docs/architecture/: architecture.md  embed_model.md  llm.md  vectordb.md
docs/docs/colab/: colab.md
docs/docs/modules/: modules.md
scripts/: generate_embeddings.py  process_doc.py
src/dib/: __init__.py
src/dib/discord/: bot_prod.py
src/dib/embed/: gen_embed.py
src/dib/process/: pdf_proc.py
tests/: test_retrieval.py
